--- a/Gmall/css/center.css
+++ b/Gmall/css/center.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 .img-font { max-width:100%;}
-.center-logo { position:fixed; top:20px; left:20px; z-index:50;}
+.center-logo { position:absolute; top:20px; left:20px; z-index:50;}
 @media (max-width:768px){
 	 .center-logo { display:none;}
 }
@@ -57,9 +57,10 @@ top:3px9 !important;
 }
 
 .panel {margin:34px 0;border-radius: 0;box-shadow:none; border:none; background:none;}
-.panel-body { background:#fff; margin-bottom:2px; padding:0;}
+.panel-body { background:#fff; margin-bottom:10px; padding:0; border:1px solid #d0d0d0}
 .panel-body .line-t,.panel-body .line-b { border-color:#f8f8f8;}
 .panel-body a,.order-time { color:#999;}
+.order-time{display: inline-block; float: right}
 .panel-body a:hover{color:#b18247;}
 /*表格*/
 .table { margin-bottom:0;}
@@ -94,15 +95,15 @@ background-color: rgba(0, 0, 0, 0.5);
 .view .mask h4 { color:#fff; margin-top:55px; font-weight:700;  margin-bottom:10px; }
 .view .mask a,.view .mask a:hover { color:#fff;}
 
-.Loadmore { padding:10px; text-align:center; background:#f2f2f2; color:#ccc; cursor:pointer;}
+.Loadmore { padding:10px; text-align:center; background:#f2f2f2; color:#9c9c9c; cursor:pointer;}
 .screenNav li{ margin-right:25px; float:left; padding:10px 0;}
-.screenNav li ,.screenNav li a{ color:#ccc;}
+.screenNav li ,.screenNav li a{ color:#565656;}
 .screenNav li.active a,.screenNav li a:hover{ color:#b18247;}
 
 /*步骤*/
 .step-group .step { display:inline-block; float:left; width:24%; position:relative;}
 .step-group .step.stepinfo5 { width:4%;}
-.step .pointwrap {position:absolute; top:-20px; left:-2px; width:3em; height: 3em;background:rgba(221,221,221,0.5); padding:2px;-moz-border-radius: 100%;-webkit-border-radius: 100%; border-radius: 100%; }
+.step .pointwrap {position:absolute; top:-12px; left:-2px; width:2em; height: 2em;background:rgba(221,221,221,0.5); padding:2px;-moz-border-radius: 100%;-webkit-border-radius: 100%; border-radius: 100%; }
 @media (max-width:768px){
 	 .step .pointwrap { width:2em; height: 2em;top:-12px;}
 }
@@ -110,7 +111,7 @@ background-color: rgba(0, 0, 0, 0.5);
 -moz-border-radius: 100%;-webkit-border-radius: 100%; border-radius: 100%; background:#999;}
 .step .linewrap { width:100%; height:6px;background:#f2f2f2;}
 .step .line { width:100%; height:3px; border-bottom:1px solid #ccc}
-.Goto1 .stepinfo1 .point,.Goto2 .stepinfo1 .point,.Goto2 .stepinfo2 .point,.Goto3 .stepinfo1 .point,.Goto3 .stepinfo2 .point,.Goto3 .stepinfo3 .point,.Goto4 .stepinfo1 .point,.Goto4 .stepinfo2 .point,.Goto4 .stepinfo3 .point,.Goto4 .stepinfo4 .point,.Goto5 .stepinfo1 .point,.Goto5 .stepinfo2 .point,.Goto5 .stepinfo3 .point,.Goto5 .stepinfo4 .point,.Goto5 .stepinfo5 .point {background:#b18247;}
+.Goto1 .stepinfo1 .point,.Goto2 .stepinfo1 .point,.Goto2 .stepinfo2 .point,.Goto3 .stepinfo1 .point,.Goto3 .stepinfo2 .point,.Goto3 .stepinfo3 .point,.Goto4 .stepinfo1 .point,.Goto4 .stepinfo2 .point,.Goto4 .stepinfo3 .point,.Goto4 .stepinfo4 .point,.Goto5 .stepinfo1 .point,.Goto5 .stepinfo2 .point,.Goto5 .stepinfo3 .point,.Goto5 .stepinfo4 .point,.Goto5 .stepinfo5 .point {background:#02b913;}
 .Goto1 .stepinfo1 .line,.Goto2 .stepinfo1 .line,.Goto2 .stepinfo2 .line,.Goto3 .stepinfo1 .line,.Goto3 .stepinfo2 .line,.Goto3 .stepinfo3 .line,.Goto4 .stepinfo1 .line,.Goto4 .stepinfo2 .line,.Goto4 .stepinfo3 .line,.Goto4 .stepinfo4 .line,.Goto5 .stepinfo1 .line,.Goto5 .stepinfo2 .line,.Goto5 .stepinfo3 .line,.Goto5 .stepinfo4 .line,.Goto5 .stepinfo5 .line {border-color:#b18247;}
 .step-txt { width:100px;position:absolute; top:30px; left:-30px; text-align:center; color:#999;}
 
@@ -125,4 +126,8 @@ background-color: rgba(0, 0, 0, 0.5);
 .cart-adr-list.selected .selectIcon { display:block;}
 
 .setup span{ display:inline-block; white-space:nowrap;}
+
+.order-row{
+    height: 40px;
+}
 
