--- a/Gmall/css/base.css
+++ b/Gmall/css/base.css
@@ -274,6 +274,7 @@ input[type="radio"] { margin-top:6px; }
 .pb20 { padding-bottom:20px; }
 .pb30 { padding-bottom:30px; }
 .pb40 { padding-bottom:40px; }
+.mt2{margin-top:2px!important;}
 .mt5 { margin-top:5px; }
 .m10 { margin:10px; }
 .ml10 { margin-left:10px; }
