--- a/Gmall/css/Gstyle.css
+++ b/Gmall/css/Gstyle.css
@@ -29,12 +29,12 @@
 .GyuyueCenter .txt { font-size:18px; color:#323232; line-height:36px; margin-top:20px; }
 .GyuyueCenter .Gbtn { margin-top:20px; margin-bottom:100px; }
 .GyuyueCenter .Gbtn.Gyuyue-Nonebtn { margin-top:50px; }
-.Gyuyue-Form { margin-top:210px; }
+.Gyuyue-Form { margin-top:190px; }
 .Gyuyue-Form .font { padding:10px 0; }
-.Gyuyue-Form .font.font-lg { margin-bottom:40px; }
+.Gyuyue-Form .font.font-lg { }
 .Gyuyue-Form .font.font-md { margin-bottom:25px; margin-left:-15px; }
 .Gyuyue-Form .form-item { padding:25px 0; padding-left:30px; border-top:1px solid #ccc }
-.Gyuyue-Form .form-item .control-label { float:left; color:#333; font-weight:normal; padding-top:3px; padding-right:0; font-size:18px; margin-bottom:10px; }
+.Gyuyue-Form .form-item .control-label { float:left; color:#333; font-weight:normal; padding-top:3px; padding-right:0; font-size:14px; margin-bottom:10px; }
 .form-control-xs .form-control { float:left; width:115px; }
 .form-Yzm { display:inline-block; clear:both; line-height:34px; margin-top:20px; }
 .form-Yzm .form-Yzmimg { float:left; }
@@ -70,7 +70,7 @@
 .register-bc { margin:30px 0 20px 0; }
 .reg-activation { padding:80px 0; line-height:36px; }
 .regok-header h1 { margin-top:20px; font-size:36px; font-weight:bold; }
-.regok-body { padding:80px 10px; }
+.regok-body { padding:30px 10px; }
 .regok-footer { padding-bottom:80px; }
 /*登陆注册 end*/
 
@@ -151,3 +151,5 @@ transition: all .2s linear;
 .container.goodnav .SingleGnav a.Buynow:hover { background:rgba(255, 0, 0, 1.0); color:#fff; text-decoration:none; }
 .container.goodnav .SingleGnav a.Buynow.none { background:rgba(204, 204, 204, 0.7); }
 .container.goodnav .SingleGnav a.Buynow.none:hover { background:rgba(204, 204, 204, 1.0); }
+
+.yuyue-form-bg{background-color: #f9f9f9; border-radius: 5px; border-top: 5px solid #bc9666; margin-bottom: 40px}
