--- a/Gmall/css/base.css
+++ b/Gmall/css/base.css
@@ -11,7 +11,7 @@ html, body {
  font-size:14px;
 }
 }
-em, i, input, textarea { font-family:"宋体", sans-serif; font-size:18px; font-style:normal; }
+em, i, input, textarea {font-family:'Microsoft YaHei', '宋体', 'sans-serif'; font-size:18px; font-style:normal; }
 ul, li { list-style:none; }
 input, select, textarea { font-size:18px; vertical-align:middle; }
 a img { border:0; }
@@ -30,6 +30,8 @@ a:focus, a:active, a.gray:hover { color:#b18247; }
 .fs14{
     font-size: 14px;
 }
+.fs24{font-size: 24px!important;}
+.fs36{font-size: 36px!important;}
 .form-label{text-align: right; font-size: 14px ; font-weight: bold; line-height: 30px;}
 a.gray999, .gray999 { color:#999; }
 /*显示、隐藏*/
@@ -250,48 +252,50 @@ input[type="radio"] { margin-top:6px; }
 .tips { font-size:12px; display:inline-block; color:#000000; }
 .tips.error-tips { color:red; }
 .tips.succ-tips { width:24px; height:34px; background:url(../img/succ.jpg) center no-repeat; }
-.Tsap { margin-top:120px; line-height:36px; color:#999; padding-bottom:20px; }
+.Tsap { margin-top:30px; margin-left: 28px; line-height:36px; color:#999; padding-bottom:20px; }
 /*边框*/
 .line-b { border-bottom:1px solid #eae0d5; }
 .line-t { border-top:1px solid #eae0d5; }
 /*表格*/
 .table>thead>tr>th, .table>tbody>tr>th, .table>tfoot>tr>th, .table>thead>tr>td, .table>tbody>tr>td, .table>tfoot>tr>td { border-top:1px solid #eae0d5; }
 .table.bordernone>thead>tr>th, .table.bordernone>tbody>tr>th, .table.bordernone>tfoot>tr>th, .table.bordernone>thead>tr>td, .table.bordernone>tbody>tr>td, .table.bordernone>tfoot>tr>td { border-top:none; }
-.table>thead>tr>th { font-weight:normal; color:#999; border-bottom:3px solid #eae0d5; }
+.table>thead>tr>th { font-weight:normal; color:#999;border-bottom: 0 }
 .table.bordernone>thead>tr>th { border-bottom:none; }
 /*填充边距*/
-.pt5 { padding:5px; }
-.p10 { padding:10px; }
-.pl10 { padding-left:10px; }
-.pr10 { padding-right:10px; }
-.pt10 { padding-top:10px; }
-.pb10 { padding-bottom:10px; }
-.p20 { padding:20px; }
-.pl20 { padding-left:20px; }
-.pr20 { padding-right:20px; }
-.pt20 { padding-top:20px; }
-.pt40 { padding-top:40px; }
-.pb20 { padding-bottom:20px; }
-.pb30 { padding-bottom:30px; }
-.pb40 { padding-bottom:40px; }
-.mt2{margin-top:2px!important;}
-.mt5 { margin-top:5px; }
-.m10 { margin:10px; }
-.ml10 { margin-left:10px; }
-.mr10 { margin-right:10px; }
-.mt10 { margin-top:10px; }
-.mb10 { margin-bottom:10px; }
-.m20 { margin:20px; }
-.ml20 { margin-left:20px; }
-.mr20 { margin-right:20px; }
-.mr50 { margin-right:50px; }
-.mt20 { margin-top:20px; }
-.mb20 { margin-bottom:20px; }
-.mt30 { margin-top:30px; }
-.mt40 { margin-top:40px; }
-.mt60 { margin-top:60px; }
-.mt80 { margin-top:80px; }
-.mt160 { margin-top:160px; }
+.pt5 { padding:5px!important; }
+.p10 { padding:10px!important; }
+.pl10 { padding-left:10px!important; }
+.pr10 { padding-right:10px!important; }
+.pt10 { padding-top:10px!important; }
+.pb10 { padding-bottom:10px!important; }
+.p20 { padding:20px!important; }
+.pl20 { padding-left:20px!important; }
+.pr20 { padding-right:20px!important; }
+.pt20 { padding-top:20px!important; }
+.pt40 { padding-top:40px!important; }
+.pb20 { padding-bottom:20px!important; }
+.pb30 { padding-bottom:30px!important; }
+.pb40 { padding-bottom:40px!important; }
+.mt2{margin-top:2px!important!important;}
+.mt5 { margin-top:5px!important; }
+.m10 { margin:10px!important; }
+.ml10 { margin-left:10px!important; }
+.mr10 { margin-right:10px!important; }
+.mt10 { margin-top:10px!important; }
+.mb10 { margin-bottom:10px!important; }
+.m20 { margin:20px!important; }
+.ml20 { margin-left:20px!important; }
+.mr20 { margin-right:20px!important; }
+.mr50 { margin-right:50px!important; }
+.mt20 { margin-top:20px!important; }
+.mb20 { margin-bottom:20px!important; }
+.mt30 { margin-top:30px!important; }
+.mt40 { margin-top:40px!important; }
+.mt60 { margin-top:60px!important; }
+.mb50{ margin-bottom:50px!important;}
+.mt80 { margin-top:80px!important; }
+.mt160 { margin-top:160px!important; }
+.border-none{border:none!important;}
 .register-style-choose{
     margin-left:20.666666%
 }
@@ -309,6 +313,37 @@ input[type="radio"] { margin-top:6px; }
 }
 .border-d0d0d0{
     border:1px solid #d0d0d0;
+}
+.cart-form-title{
+    background-color: #fff;
+    height: 4.5rem;
+    line-height: 3.8rem;
+    font-size: 16px;
+    padding-left: 1rem;
+    border-top: 5px solid #bc9666;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    margin-bottom: 18px;
+    border-bottom: 1px solid #eae0d5;
+}
+.cart-form-body{
+    background-color: #fff;
+    margin-bottom: 20px;
+    padding: 15px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-top: 1px solid #eae0d5;
+}
+.nav-container ul{
+    float: right;
+    margin-right: 50px;
+    color:#d69d56;
+
+}
+.nav-container ul li{
+    display: inline-block;
+    margin-right: 10px;
+    margin-top: 10px;
 }
 @media (max-width: 767px){
    .form-label{display: none}
