--- a/css/layout.css
+++ b/css/layout.css
@@ -3,6 +3,7 @@ body{
     width: 100%;
     font-family: "Microsoft Yahei", "Helvetica Neue", Helvetica, "Wenquanyi Micro Hei", Arial, sans-serif;
 }
+.ml10{margin-left:10px!important;}
 .site-nav {
     position: absolute;
     top: 0;
@@ -124,6 +125,13 @@ body{
     height: 2.5rem;
     line-height: 3.5rem;
 }
+.site-nav-bottom-title{
+    font-size: 12px;
+    color: #323232;
+    height: 2.5rem;
+    line-height: 3.5rem;
+
+}
 .color-grey{
     color: #b3b3b1 ;
 }
@@ -139,7 +147,7 @@ body{
     padding: 0 16px 0 6px;
 }
 .site-nav-list-bottom{
-    margin-top: 2rem;
+    margin-top: 4rem;
 }
 .surface {
     top: 0;
@@ -159,7 +167,7 @@ body{
 }
 .site-container{
     height: 100%;
-    background: url("../images/index-focus-img.png") no-repeat center #000;
+    background: url("../images/index-focus-img.jpg") no-repeat center #000;
     background-size: cover;
     position: relative;
     overflow: auto;
@@ -179,18 +187,37 @@ body{
     height: 100%;
 }
 .site-middle-button{
-    vertical-align:middle;
+    vertical-align:bottom;
     display:table-cell;
+    margin-bottom: 1rem;
 }
 .icons-logo-circle{
-    background: url("../images/logo-circle.png") no-repeat center;
-    background-size: 3rem 3rem;
+    background-color: rgba(139,115,86,0.8);
+    border-radius: 1.5rem;
+    -moz-border-radius: 1.5rem;
+    -ms-border-radius: 1.5rem;
+    -o-border-radius: 1.5rem;
+    border:2px solid;
+    border-color: rgba(246,233,217,0.7);
+}
+.icons-logo-circle:hover{
+    background-color: rgba(139,115,86,1);
+}
+.icons-logo-content{
+    height: 3rem;
+    line-height: 3rem;
+    text-align: center;
+    color: #ae9e8d;
 }
 .btn-lg {
     font-size: 14px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
     letter-spacing: -0.02em;
     -webkit-transition: .1s background-color,0.1s border-color,0.1s color;
     -moz-transition: .1s background-color,0.1s border-color,0.1s color;
@@ -216,14 +243,10 @@ body{
 
 @media (max-width: 767px){
     .site-container{
-        background-image: url("../images/index-focus-img-wap.png")!important;
+        background-image: url("../images/index-focus-img-wap.jpg")!important;
     }
     .icons-logo-circle {
-        background: url("../images/icon-nav-list.png") no-repeat center;
-        background-size: 2.5rem 2.5rem;
     }
     #open-nav-button {
-        width: 2.5rem;
-        height: 2.5rem;
     }
 }
