--- a/css/layout.css
+++ b/css/layout.css
@@ -4,6 +4,8 @@ body{
     font-family: "Microsoft Yahei", "Helvetica Neue", Helvetica, "Wenquanyi Micro Hei", Arial, sans-serif;
 }
 .ml10{margin-left:10px!important;}
+.mr10{margin-right:10px!important;}
+.mr5{margin-right: 5px!important;}
 .site-nav {
     position: absolute;
     top: 0;
