--- a/Gmall/css/Gstyle.css
+++ b/Gmall/css/Gstyle.css
@@ -112,14 +112,14 @@ text-align:center;
 -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(M11=0.9914,M12=-0.1305,M21=0.1305,M22=0.9914,SizingMethod='auto expand')";  IE8 */
 
 }
-.single-hd-wrap { width:100%; height:32px; line-height:32px; }
+.single-hd-wrap { width:100%; height:40px; line-height:40px; }
 .single-hd { min-height:32px; background:rgba(221, 221, 221, 0.8); color:#a0a0a0; font-size:16px; }
 .single-hd, .single-hd a { color:#a0a0a0; }
 .single-hd a:hover, .single a:hover, .single a.hover { color:#b18247; }
 .single-hd.navbar-fixed-top { z-index:1000; top:57px; }
 @media (min-width:768px) {
  .single-hd.navbar-fixed-top {
-top:60px;
+top:69px;
 }
 }
 .SingleGnav { width:100%; position:relative; text-align:center; }
@@ -127,9 +127,9 @@ top:60px;
 .SingleGnav li.current a, .SingleGnav li a:hover { text-decoration:none; color:#a0a0a0; }
 .SingleGnav li i { line-height:12px; padding:2px; position:absolute; top:-10px; right:0; font-size:12px; color:#fff; background:#ff0000; -moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px; }
 .SingleGnav li.back { margin:0; width: 9px; height: 32px; z-index: 8; position: absolute; top:0; border-bottom: 2px solid #a0a0a0; }
-.single, .single a { color:#c3c1bf; }
+.single, .single a { color:#565656; }
 .single-title { font-size:48px; font-weight:700; }
-.single-article { line-height:2em; }
+.single-article { line-height:2em; font-size: 16px}
 .single-article h3 { font-weight:normal; }
 @media (min-width:768px) {
  .mytiemtxt {
@@ -143,7 +143,7 @@ text-align:center;
 .single-info .section.gg-animation-active .product { opacity:1; -webkit-transform:translate3d(0, 0, 0); transform:translate3d(0, 0, 0) }
 .container.goodnav { padding-bottom:0; }
 .container.goodnav .SingleGnav { text-align:right; }
-.container.goodnav .SingleGnav a.Buynow { background:rgba(255, 0, 0, 0.7); padding:2px 10px; color:#fff; font-size:14px; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; -webkit-transition: all .2s linear;
+.container.goodnav .SingleGnav a.Buynow { background:rgba(255, 0, 0, 0.7); padding:5px 10px; color:#fff; font-size:14px; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; -webkit-transition: all .2s linear;
 -moz-transition: all .2s linear;
 -ms-transition: all .2s linear;
 transition: all .2s linear;
