--- a/css/layout.css
+++ b/css/layout.css
@@ -285,6 +285,24 @@ body{
     top: 52px;
     left: 12px;
 }
+.index-login-register{
+    position: absolute;
+    color: #fff;
+    z-index: 99;
+    right: 10px;
+    top: 10px;
+    font-size: 12px;
+    color: #b18247;
+}
+.index-login-register ul li{
+    display: inline-block;
+    margin-left: 10px;
+    cursor: pointer;
+}
+#share-to-sina-button{
+    -webkit-transition: all 1.5s;
+    transition: all 1.5s;
+}
 
 @media (max-width: 767px){
     .site-container{
