--- a/css/layout.css
+++ b/css/layout.css
@@ -303,6 +303,27 @@ body{
     -webkit-transition: all 1.5s;
     transition: all 1.5s;
 }
+.buy-now-button{
+    background: rgba(255, 0, 0, 0.7);
+    padding: 5px 10px;
+    color: #fff;
+    color: #fff!important;
+    font-size: 14px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-transition: all .2s linear;
+    -moz-transition: all .2s linear;
+    -ms-transition: all .2s linear;
+    transition: all .2s linear;
+    padding-top: 7px!important;
+    padding-bottom: 7px!important;
+    margin-top: 8px!important;
+}
+.guoguannav-icon{
+    background:url("../images/logo-heng.png") no-repeat center;
+    background-size: 98px 40px;
+}
 
 @media (max-width: 767px){
     .site-container{
