--- a/css/layout.css
+++ b/css/layout.css
@@ -3,9 +3,13 @@ body{
     width: 100%;
     font-family: "Microsoft Yahei", "Helvetica Neue", Helvetica, "Wenquanyi Micro Hei", Arial, sans-serif;
 }
+.fs14{font-size: 14px!important;}
+.fs16{font-size: 16px!important;}
+.fs18{font-size: 18px!important;}
 .ml10{margin-left:10px!important;}
 .mr10{margin-right:10px!important;}
 .mr5{margin-right: 5px!important;}
+.clear{clear: both}
 .site-nav {
     position: absolute;
     top: 0;
@@ -60,6 +64,11 @@ body{
     left: 0;
     right: 0;
     bottom: 0;
+}
+.new-navgation{
+    border-bottom: 1px solid #eee;
+    height: 80px;
+    padding-top: 15px ;
 }
 .site-nav-logo .distraction-free-component {
     -webkit-transition: opacity .3s linear .3s;
@@ -303,27 +312,7 @@ body{
     -webkit-transition: all 1.5s;
     transition: all 1.5s;
 }
-.buy-now-button{
-    background: rgba(255, 0, 0, 0.7);
-    padding: 5px 10px;
-    color: #fff;
-    color: #fff!important;
-    font-size: 14px;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
-    -webkit-transition: all .2s linear;
-    -moz-transition: all .2s linear;
-    -ms-transition: all .2s linear;
-    transition: all .2s linear;
-    padding-top: 7px!important;
-    padding-bottom: 7px!important;
-    margin-top: 8px!important;
-}
-.guoguannav-icon{
-    background:url("../images/logo-heng.png") no-repeat center;
-    background-size: 98px 40px;
-}
+
 
 @media (max-width: 767px){
     .site-container{
