--- a/Gmall/css/Gstyle.css
+++ b/Gmall/css/Gstyle.css
@@ -113,8 +113,8 @@ text-align:center;
 
 }
 .single-hd-wrap { width:100%; height:40px; line-height:40px; }
-.single-hd { min-height:32px; background:rgba(221, 221, 221, 0.8); color:#a0a0a0; font-size:16px; }
-.single-hd, .single-hd a { color:#a0a0a0; }
+.single-hd { min-height:32px; color:#a0a0a0; font-size:16px; }
+.single-hd, .single-hd a { color:#777; }
 .single-hd a:hover, .single a:hover, .single a.hover { color:#b18247; }
 .single-hd.navbar-fixed-top { z-index:1000; top:57px; }
 @media (min-width:768px) {
@@ -123,8 +123,8 @@ top:69px;
 }
 }
 .SingleGnav { width:100%; position:relative; text-align:center; }
-.SingleGnav li { position:relative; z-index:10; height:32px; line-height:32px; font-size:16px; display:inline-block; margin:0 10px; }
-.SingleGnav li.current a, .SingleGnav li a:hover { text-decoration:none; color:#a0a0a0; }
+.SingleGnav li { position:relative; z-index:10; height:32px; line-height:32px; font-size:14px; display:inline-block; margin:0 10px; }
+.SingleGnav li.current a, .SingleGnav li a:hover { text-decoration:none; color:#565656; }
 .SingleGnav li i { line-height:12px; padding:2px; position:absolute; top:-10px; right:0; font-size:12px; color:#fff; background:#ff0000; -moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px; }
 .SingleGnav li.back { margin:0; width: 9px; height: 32px; z-index: 8; position: absolute; top:0; border-bottom: 2px solid #a0a0a0; }
 .single, .single a { color:#565656; }
@@ -142,8 +142,8 @@ text-align:center;
 .single-info .section .product2 { -webkit-transform:translate3d(20px, 0, 0); transform:translate3d(20px, 0, 0) }
 .single-info .section.gg-animation-active .product { opacity:1; -webkit-transform:translate3d(0, 0, 0); transform:translate3d(0, 0, 0) }
 .container.goodnav { padding-bottom:0; }
-.container.goodnav .SingleGnav { text-align:right; }
-.container.goodnav .SingleGnav a.Buynow { background:rgba(255, 0, 0, 0.7); padding:5px 10px; color:#fff; font-size:14px; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; -webkit-transition: all .2s linear;
+.container.goodnav .SingleGnav { text-align:right;  margin-top: 5px; }
+.container.goodnav .SingleGnav a.Buynow { background:rgba(255, 0, 0, 0.7); padding:7px 10px; color:#fff; font-size:14px; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; -webkit-transition: all .2s linear;
 -moz-transition: all .2s linear;
 -ms-transition: all .2s linear;
 transition: all .2s linear;
@@ -153,3 +153,14 @@ transition: all .2s linear;
 .container.goodnav .SingleGnav a.Buynow.none:hover { background:rgba(204, 204, 204, 1.0); }
 
 .yuyue-form-bg{background-color: #f9f9f9; border-radius: 5px; border-top: 5px solid #bc9666; margin-bottom: 40px}
+.product-detail-zhongguodao{position:absolute; left:14px; background: url("../img/zhongguodao.png"); background-size: 98px 40px; width: 98px; height: 40px}
+.productDetail-nav-bg{
+    background-color: rgba(255,255,255,0.8);
+    padding-top: 5px;
+    padding-bottom:5px;
+    border-radius: 5px;
+    -webkit-transition: all .5s linear;
+    -moz-transition: all .5s linear;
+    -ms-transition: all .5s linear;
+    transition: all .5s linear;
+}
