--- a/Gmall/css/base.css
+++ b/Gmall/css/base.css
@@ -28,8 +28,9 @@ a:focus, a:active, a.gray:hover { color:#b18247; }
 .prompt { font-size:14px; color:#999; }
 .gray { color:#ccc; }
 .fs14{
-    font-size: 14px;
+    font-size: 14px!important;
 }
+.fs12{font-size: 12px!important;}
 .fs24{font-size: 24px!important;}
 .fs36{font-size: 36px!important;}
 .form-label{text-align: right; font-size: 14px ; font-weight: bold; line-height: 30px;}
@@ -107,9 +108,10 @@ background:#000; position: absolute; top:0; left:0; -ms-filter: "progid:DXImageT
     -webkit-border-radius: 5px;
     border-radius: 5px;
  }
+.bg-color-fff{background-color: #fff!important;}
 .Gnav li.Glogo-lg { display:none; }
 .Gnav li.back { margin:0; width: 9px; height: 32px; z-index: 8; position: absolute; top:0; border-bottom: 2px solid #b18247; }
-.footer { position:static; margin-top:20px; font-size:12px; color:#999; border-bottom:5px solid #b18247; }
+.footer { position:static; margin-top:20px; font-size:12px; color:#999; border-bottom:5px solid #b18247; border-top:1px solid #d0d0d0}
 .footer.navbar { padding:0; -moz-border-radius: 0; -webkit-border-radius: 0; border-radius: 0; }
 .footer .container { padding-bottom:0; }
 .footer-cp p { display:block; text-align:center; }
@@ -178,7 +180,7 @@ margin:0 20px;
 .Rightbar { display:none; position:fixed; top:50%; right:10px; width:36px; margin-top:-36px; z-index:1000; }
 .Rightbar a { display:block; height:36px; color:#b4b4b4; font-size:36px; }
 .Rightbar a:hover { color:#b18247; }
-.ptonav { padding-top:160px; }
+.ptonav { padding-top:60px; }
 .wrap {
 overflow:; height: 100%; -webkit-transition: -webkit-transform .2s cubic-bezier(0.2, 0.3, 0.25, 0.9);
 -moz-transition: -moz-transform .2s cubic-bezier(0.2, 0.3, 0.25, 0.9);
@@ -254,7 +256,8 @@ transition: all .2s linear;
 .Gpagination li.pbtn.next a:hover b { border-color:transparent transparent transparent #e1ceb6; }
 .Gpagination li.pbtn.next a.disabled:hover b { border-color:transparent transparent transparent #d5d5d5; }
 /*输入框*/
-.form-control { min-width:50px; background:none; }
+.form-control {height: 30px; background:none; }
+.form-control-number{width: 49px; display: inline-block}
 .form-control:focus { border-color: #b18247; outline: 0; -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(177, 130, 71, 0.6); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(177, 130, 71, 0.6); }
 input[type="radio"] { margin-top:6px; }
 /* 模态 */
@@ -275,6 +278,50 @@ input[type="radio"] { margin-top:6px; }
 .table.bordernone>thead>tr>th, .table.bordernone>tbody>tr>th, .table.bordernone>tfoot>tr>th, .table.bordernone>thead>tr>td, .table.bordernone>tbody>tr>td, .table.bordernone>tfoot>tr>td { border-top:none; }
 .table>thead>tr>th { font-weight:normal; color:#999;border-bottom: 0 }
 .table.bordernone>thead>tr>th { border-bottom:none; }
+.product-muse-detail{font-size: 12px;
+    text-align: left;
+    display: block;
+    color: #ccc;}
+.line-height-100{
+padding-top: 44px}
+.width160{width: 160px!important;}
+.minus-button{
+    display: inline-block!important;
+    height: 30px!important;
+    width: 30px!important;
+    line-height: 30px!important;
+    border: 1px solid #b18247!important;
+    border-radius: 5px!important;
+    color: #b18247!important;
+    vertical-align: middle!important;
+}
+.minus-button:hover{
+    color: #fff!important;
+    background-color: #b18247;
+}
+.minus-button:active{
+    color: #fff!important;
+    background-color: #d69d56;
+}
+.tl-left{text-align: left!important;}
+.plus-button{
+    display: inline-block!important;
+    height: 30px!important;
+    width: 30px!important;
+    line-height: 30px!important;
+    border: 1px solid #b18247!important;
+    border-radius: 5px!important;
+    color: #b18247!important;
+    vertical-align: middle!important;
+}
+.plus-button:hover{
+     color: #fff!important;
+     background-color: #b18247;
+ }
+.plus-button:active{
+    color: #fff!important;
+    background-color: #d69d56;
+}
 /*填充边距*/
 .pt5 { padding:5px!important; }
 .p10 { padding:10px!important; }
@@ -284,6 +331,7 @@ input[type="radio"] { margin-top:6px; }
 .pb10 { padding-bottom:10px!important; }
 .p20 { padding:20px!important; }
 .pl20 { padding-left:20px!important; }
+.pr0{padding-right: 0!important;}
 .pr20 { padding-right:20px!important; }
 .pt20 { padding-top:20px!important; }
 .pt40 { padding-top:40px!important; }
@@ -329,14 +377,10 @@ input[type="radio"] { margin-top:6px; }
     border:1px solid #d0d0d0;
 }
 .cart-form-title{
-    background-color: #fff;
     height: 4.5rem;
     line-height: 3.8rem;
     font-size: 16px;
     padding-left: 1rem;
-    border-top: 5px solid #bc9666;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
     margin-bottom: 18px;
     border-bottom: 1px solid #eae0d5;
 }
@@ -346,7 +390,6 @@ input[type="radio"] { margin-top:6px; }
     padding: 15px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
-    border-top: 1px solid #eae0d5;
 }
 .nav-container ul{
     float: right;
@@ -360,6 +403,13 @@ input[type="radio"] { margin-top:6px; }
     margin-top: 10px;
 }
 @media (max-width: 767px){
+    .cart-product-img{
+        display: none!important;
+    }
+    .line-height-100{padding-top: 10px;
+    padding-bottom: 10px}
+    .table-responsive{border:none;}
+    .product-muse-detail{width: 100px; word-break:break-all!important; }
    .form-label{display: none}
     .btn{margin-top:10px}
     .register-style-choose{
@@ -373,6 +423,43 @@ input[type="radio"] { margin-top:6px; }
         margin-top: 58px;
     }
     .ptonav{
-        padding-top: 90px;
+        padding-top: 20px;
+    }
+    .Gnav li{
+        display: block;
+        border-bottom: 1px solid #d0d0d0;
+        font-size: 14px;
+        height: 45px;
+        width: 100%;
+        margin-left: 0;
+        padding-left: 10px;
+        line-height: 45px;
+    }
+    .nav-container ul li{
+        display: inline-block!important;
+    }
+    .Gnav li:first-child{
+        height: 0;
+        border-bottom: none;
+    }
+    .nav-container ul li:first-child{
+        height: 24px;
+        display: inline-block!important;
+    }
+    .navbar-header{
+        background: url("../img/logo-heng.png") no-repeat;
+        background-size: 64px 50px;
+        background-position: left;
+    }
+    .nav-container ul li:last-child{
+        border-bottom: none;
+    }
+    #Gnavbar{border-bottom: 1px solid #ddd;
+        background: #f3f3f3;
+        padding: 0; }
+    .Gnav{width: 100%; height:0; line-height: 0;}
+    .new-logo{display: none}
+    .nav-container ul{
+        float:left;
     }
 }
