订单详情页移动版

--- a/site/css/base.css
+++ b/site/css/base.css
@@ -137,6 +137,7 @@ a{color: #565656;}
 .border-bottom-d0d0d0{border-bottom: #d0d0d0;}
 .inlinebl{display: inline-block}
 .mt1{margin-top:1rem!important; }
+.ml1{margin-left: 1rem!important;}
 /* nav头部  */
 nav{height: 4rem; line-height: 4rem; background-color: #f4f4f4; text-align: center}
 .icon-home-appearance{
