--- a/site/css/base.css
+++ b/site/css/base.css
@@ -8,7 +8,7 @@ html {
     color:black;
     font-size: 62.5%;/*10 ÷ 16 × 100% = 62.5%*/
 }
-body {font-size: 1.4rem;/*1.4 × 10px = 14px */
+body {font-size: 14px;
     background-color:#ebebeb;
     height: 100%;
     width: 100%;
@@ -137,7 +137,14 @@ a{color: #565656;}
 .border-bottom-d0d0d0{border-bottom: #d0d0d0;}
 .inlinebl{display: inline-block}
 .mt1{margin-top:1rem!important; }
+.mt3{margin-top:3rem!important;}
 .ml1{margin-left: 1rem!important;}
+.ml1-8{margin-left: 1.8rem!important;}
+.mb0-6{margin-bottom: 0.6rem!important;}
+.mb2{margin-bottom: 2rem!important;}
+.color-f66900{color: #f66900!important;}
+.width100{width: 100%!important;}
+.width49{width: 49%!important;}
 /* nav头部  */
 nav{height: 4rem; line-height: 4rem; background-color: #f4f4f4; text-align: center}
 .icon-home-appearance{
@@ -202,9 +209,29 @@ nav{height: 4rem; line-height: 4rem; background-color: #f4f4f4; text-align: cent
 }
 .m-delete-button{
     height: 3rem;
+    display: inline-block;
+    min-width: 7rem;
     background-color: #f8f8f8;
     color: #565656;
     text-align: center;
     border-radius: 0.416666rem;
     margin-top: 1rem;
+}
+.m-input{
+    height: 2rem;
+    line-height: 2rem;
+    border: none;
+    border-radius: 0.416666rem;
+    padding-top:0.6rem;
+    padding-bottom:0.6rem;
+}
+/* 提示信息样式  */
+.tips-error{
+    color: red;
+    margin-top: 0.2rem;
+    font-size: 1rem;
+}
+.select{
+    border: 0.1rem solid #f66900!important;
+    border-radius: 0.416666rem!important;
 }
