--- a/site/css/base.css
+++ b/site/css/base.css
@@ -148,6 +148,7 @@ a{color: #565656;}
 .mb2{margin-bottom: 2rem!important;}
 .color-f66900{color: #f66900!important;}
 .width100{width: 100%!important;}
+.width98{width: 98%!important;}
 .width49{width: 49%!important;}
 /* nav头部  */
 nav{height: 4rem; line-height: 4rem; background-color: #f4f4f4; text-align: center}
@@ -225,13 +226,18 @@ nav{height: 4rem; line-height: 4rem; background-color: #f4f4f4; text-align: cent
     height: 2rem;
     line-height: 2rem;
     border: none;
+    padding-left: 0.6rem;
     border-radius: 0.416666rem;
     padding-top:0.6rem;
     padding-bottom:0.6rem;
 }
+.m-input-border{
+    border:0.1rem solid #d0d0d0;
+}
 /* 提示信息样式  */
 .tips-error{
     color: red;
+    padding-left: 0.6rem;
     margin-top: 0.2rem;
     font-size: 1rem;
 }
