--- a/site/css/m-cart.css
+++ b/site/css/m-cart.css
@@ -231,8 +231,7 @@
 .m-shopping-cart-new ul li:last-child{border-bottom: none}
 .m-choose-product-new {
     background-color: #fff;
-    min-height: 12.6rem;
-    height: auto;
+    height: 12.6rem;
 }
 .m-choose-product-new .m-choose-title{
     font-size: 2rem;
@@ -241,8 +240,7 @@
 }
 .m-choose-product-new .m-choose-detail{
     padding:1rem;
-    margin-left: 1rem;
-    width: 95%;
+    width: 90%;
     border-bottom: 0.1rem solid #d0d0d0;
 }
 .m-choose-product-new .m-choose-brief-detail{
@@ -274,4 +272,20 @@
 .m-product-label{
     min-width: 5rem;
     display: inline-block;
+}
+.delete-order-button{
+    float: left;
+    width:5rem;
+    height: 5rem;
+    text-align: center;
+    line-height: 5rem;
+    color: #858688;
+    font-weight: bold;
+    font-size: 2rem;
+}
+.delete-order-button:active{
+    background-color: #d0d0d0;
+}
+.delete-order-button:hover{
+    background-color: #d0d0d0;
 }
