--- a/product/css/base.css
+++ b/product/css/base.css
@@ -9,7 +9,7 @@ html {
     font-size: 62.5%;/*10 ÷ 16 × 100% = 62.5%*/
 }
 body {font-size: 14px;
-    background-color:#ebebeb;
+    background-color:#f8f8f8;
     height: 100%;
     width: 100%;
     min-height: 40rem;
@@ -143,6 +143,7 @@ a{color: #565656;}
 .ml1{margin-left: 1rem!important;}
 .ml1-8{margin-left: 1.8rem!important;}
 .mb0-6{margin-bottom: 0.6rem!important;}
+.mr1{margin-right: 1rem}
 .mb0{margin-bottom: 0!important;}
 .mb1{margin-bottom: 1rem!important;}
 .mb2{margin-bottom: 2rem!important;}
@@ -151,7 +152,7 @@ a{color: #565656;}
 .width98{width: 98%!important;}
 .width49{width: 49%!important;}
 /* nav头部  */
-nav{height: 4rem; line-height: 4rem; background-color: #f4f4f4; text-align: center}
+nav{height: 4rem; line-height: 4rem; background-color: #fff; text-align: center; border-bottom: 0.1rem solid #d0d0d0;}
 .icon-home-appearance{
     color: #5f6468!important ;
     font-size: 2rem;
@@ -196,7 +197,7 @@ nav{height: 4rem; line-height: 4rem; background-color: #f4f4f4; text-align: cent
 .footer{
     height: 5rem;
     line-height: 5rem;
-    background-color: #f4f4f4;
+    background-color: #fff;
     text-align: center;
     font-size: 1rem;
     color: #858688;
@@ -212,15 +213,18 @@ nav{height: 4rem; line-height: 4rem; background-color: #f4f4f4; text-align: cent
 /* button */
 .m-button{
     display: inline-block;
-    height: 3rem;
+    height: 4rem;
     text-align: center;
     min-width: 7rem;
     background-color: #f66900;
     border-radius: 0.416666rem;
     color: #fff;
 }
+.m-button:active{
+    background-color: #f77f25;
+}
 .m-button-content{
-    line-height: 3rem;
+    line-height: 4rem;
 }
 .m-delete-button{
     height: 3rem;
