--- a/product/css/m-product.css
+++ b/product/css/m-product.css
@@ -15,6 +15,7 @@
     padding:1rem;
     background-color: #fff;
     margin-bottom:0.6rem;
+    border-bottom: 0.1rem solid #ebebeb;
 }
 /* tab切换页 */
 .etabs { margin: 0; padding: 0; background-color: #fff;margin-bottom: 0rem;}
