--- a/site/css/base.css
+++ b/site/css/base.css
@@ -143,6 +143,7 @@ a{color: #565656;}
 .ml1{margin-left: 1rem!important;}
 .ml1-8{margin-left: 1.8rem!important;}
 .mb0-6{margin-bottom: 0.6rem!important;}
+.mr1{margin-right: 1rem}
 .mb0{margin-bottom: 0!important;}
 .mb1{margin-bottom: 1rem!important;}
 .mb2{margin-bottom: 2rem!important;}
@@ -172,6 +173,16 @@ nav{height: 4rem; line-height: 4rem; background-color: #fff; text-align: center;
     right: 0;
     top: 0;
 }
+.icon-user-appearance{
+    color: #5f6468!important;
+    font-size: 2rem;
+    height: 4rem!important;
+    line-height: 4rem!important;
+    width: 4rem!important;
+    position: absolute;
+    right: 4rem;
+    top: 0;
+}
 .head-title-appearance{
     color: #454545;
     display: inline-block;
@@ -186,7 +197,7 @@ nav{height: 4rem; line-height: 4rem; background-color: #fff; text-align: center;
 .footer{
     height: 5rem;
     line-height: 5rem;
-    background-color: #f4f4f4;
+    background-color: #fff;
     text-align: center;
     font-size: 1rem;
     color: #858688;
@@ -202,15 +213,18 @@ nav{height: 4rem; line-height: 4rem; background-color: #fff; text-align: center;
 /* button */
 .m-button{
     display: inline-block;
-    height: 3rem;
+    height: 4rem;
     text-align: center;
     min-width: 7rem;
     background-color: #f66900;
     border-radius: 0.416666rem;
     color: #fff;
 }
+.m-button:active{
+    background-color: #f77f25;
+}
 .m-button-content{
-    line-height: 3rem;
+    line-height: 4rem;
 }
 .m-delete-button{
     height: 3rem;
