--- a/site/css/m-cart.css
+++ b/site/css/m-cart.css
@@ -3,12 +3,13 @@
     min-height: 6rem;
     height: auto;
     border-radius: 0.41666rem;
-    border-bottom: 0.2rem solid #d0d0d0;
+    border-bottom: 0.2rem solid #ebebeb;
 }
 .m-shopping-cart{
     margin-bottom: 6rem;
 }
-.m-shopping-cart ul li{border-bottom: 0.1rem solid #d0d0d0;
+.m-shopping-cart ul li{
+    border-bottom: 0.1rem solid #ebebeb;
     padding: 1rem;
 }
 .m-shopping-cart ul li:last-child{border-bottom: none}
@@ -86,7 +87,7 @@
     width: 100%;
     height: 3rem;
     border: none;
-    background: #f8f8f8;
+    background: #fff;
     border-radius: 0.416666rem;
 }
 .m-order-unpay{
@@ -105,6 +106,11 @@
     height: 29rem;
     border-bottom-left-radius: 0.416666rem;
     border-bottom-right-radius: 0.416666rem;
+}
+.m-online-detail-content-new{
+    padding-bottom: 0;
+    height: auto;
+    border-radius: 0.416666rem;
 }
 .m-order-detail-partOne{
     color: #565656;
@@ -144,15 +150,13 @@
 }
 .m-online-payOne{
     height: 3.8rem;
-    color: #00a74b;
-    font-weight: bold;
-    font-size: 1.6rem;
     line-height: 3.8rem;
     margin-left: 1.8rem;
 }
 .m-online-detail-content{
     height: auto;
     padding-bottom: 3rem;
+    margin-bottom: 8rem;
 }
 .m-address-display{
     width: auto;
@@ -171,12 +175,12 @@
 .choose-checkout-style{
     background-color: #fff;
     border-radius: 0.416666rem;
-    border-bottom: 0.1rem solid #d0d0d0;
+    border-bottom: 0.1rem solid #ebebeb;
     color: #565656;
 }
 .choose-checkout-style ul li{
     padding:1rem;
-    border-bottom:0.1rem solid #d0d0d0;
+    border-bottom:0.1rem solid #ebebeb;
 }
 .choose-checkout-style .select{
     border: 0.1rem solid #f66900;
@@ -218,7 +222,7 @@
     color: #f66900;
 }
 .m-check-pay-area{
-    margin-top: 10rem;
+    margin-top: 1rem;
     margin-bottom: 6rem;
     border-top: 0.1rem solid #d0d0d0;
     padding-top: 1.5rem;
@@ -232,7 +236,7 @@
 .m-choose-product-new {
     background-color: #fff;
     height: 12.6rem;
-    border-bottom: 0.1rem solid #d0d0d0;
+    border-bottom: 0.1rem solid #ebebeb;
 }
 .m-choose-product-new .m-choose-title{
     font-size: 2rem;
@@ -248,7 +252,8 @@
 }
 .m-choose-detail-next{
     float: right;
-    height: 11rem;
+    height: 12.6rem;
+    position: relative;
 }
 .icon-minus-adjust{
     height: 6.3rem;
@@ -260,12 +265,16 @@
     text-align: center;
 }
 .icon-minus-adjust:active{
-    background-color: #d0d0d0;
+    background-color: #f77f25;
 }
 
 .m-product-number{
     border-bottom: none!important;
     text-align: right;
+    position: absolute;
+    bottom: 1rem;
+    padding:0!important;
+    left:  -7rem;
 }
 .m-product-label{
     min-width: 5rem;
@@ -274,10 +283,12 @@
 .delete-order-button{
     float: left;
     width:5rem;
+    background: url("../img/icon-trash.png") center no-repeat;
+    background-size: 2rem 2rem;
     height: 5rem;
     text-align: center;
     line-height: 5rem;
-    color: #858688;
+    color: #b5b5b5;
     font-size: 2rem;
 }
 .delete-order-button:active{
@@ -286,11 +297,20 @@
 
 .m-choose-product-address{
     border-radius: 0;
-    border-bottom: 0.1rem solid #d0d0d0;
+    border-bottom: 0.1rem solid #ebebeb;
 }
 .m-choose-product-address li{
-    border-bottom: 0.1rem solid #d0d0d0;
+    border-bottom: 0.1rem solid #ebebeb;
 }
 .m-choose-product-address li:last-child{
     border-bottom: none;
+}
+.m-shopping-cart-detail {
+    width: 60%;
+    height: 12.6rem;
+    float: left;
+    position: relative;
+}
+.m-order-zhedie{
+    cursor: pointer;
 }
