产品详情页

--- a/nextHour/css/layout.css
+++ b/nextHour/css/layout.css
@@ -3,6 +3,18 @@ body{
     width: 100%;
     font-family: "Microsoft Yahei", "Helvetica Neue", Helvetica, "Wenquanyi Micro Hei", Arial, sans-serif;
 }
+pre {
+    display: block;
+    padding: 9.5px;
+    margin: 0 0 10px;
+    font-size: 16px;
+    line-height: 1.428571429;
+    color: #333;
+    word-break: break-all;
+    word-wrap: break-word;
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 4px;}
 .ml10{margin-left:10px!important;}
 .mr10{margin-right:10px!important;}
 .mr5{margin-right: 5px!important;}
@@ -20,7 +32,7 @@ body{
     left: -9999px;
 }
 .site-nav-logo {
-    position: absolute;
+    position: fixed;
     top: 10px;
     left: 10px;
     width: 44px;
@@ -151,9 +163,9 @@ body{
 .site-nav-list-bottom{
     margin-top: 4rem;
 }
-.surface {
-    top: 0;
-    height: 100%;
+
+.surface-bottom{
+    bottom: 0;
     width: 100%;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -163,16 +175,36 @@ body{
     -ms-transition: padding-bottom .1s;
     -o-transition: padding-bottom .1s;
     transition: padding-bottom .1s;
+    height: 500px;
+    background: url("../images/5.jpg") no-repeat center #000;
+    background-size: cover;
+    position: relative;
+    z-index: 2;
+    background-position: center;
+    -webkit-moz-background-size: cover;-moz-moz-background-size: cover;-ms-moz-background-size: cover;-o-moz-background-size: cover;moz-background-size: cover;
 }
 .button {
     display: inline-block;
 }
 .site-container{
+   height: 100%;
+}
+.surface{
+    top: 0;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: padding-bottom .1s;
+    -moz-transition: padding-bottom .1s;
+    -ms-transition: padding-bottom .1s;
+    -o-transition: padding-bottom .1s;
+    transition: padding-bottom .1s;
     height: 100%;
+    max-height: 900px;
     background: url("../images/index-focus-img.jpg") no-repeat center #000;
     background-size: cover;
     position: relative;
-    overflow: auto;
     z-index: 2;
     background-position: center;
     -webkit-moz-background-size: cover;-moz-moz-background-size: cover;-ms-moz-background-size: cover;-o-moz-background-size: cover;moz-background-size: cover;
@@ -192,6 +224,18 @@ body{
     display:table-cell;
     overflow: hidden;
     margin-bottom: 1rem;
+}
+.site-paper-content{
+    max-width: 1140px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin:0 auto;
+}
+.site-paper-content-position{
+    width: 100%;
+    position: absolute;
 }
 /*.icons-logo-circle{
     background-color: rgba(139,115,86,0.8);
@@ -328,7 +372,7 @@ body{
     display: table;
     vertical-align: middle;
     margin: 0 auto;
-    width: 500px;
+    width: auto;
     text-align: center;
     color: #fff;
     position: absolute;
@@ -361,6 +405,7 @@ body{
 .next-hour-time-number{
     width: 60px;
     font-size: 40px;
+    font-family:"Helvetica Neue",  Helvetica, "Microsoft Yahei", "Wenquanyi Micro Hei", Arial, sans-serif !important;
 }
 .next-hour-big-title{
     font-size: 40px;
