--- a/product/css/m-product.css
+++ b/product/css/m-product.css
@@ -36,3 +36,34 @@
 .product-story-one{
     margin-top:0.1rem;
 }
+
+
+/*微信分享*/
+#weixin-guide{
+    width: 100%;
+    height: 100%;
+    background-image: url("../images/guide.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    z-index: 9999;
+}
+#mobile-guide{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-image: url("../images/mobile-guide.png");
+    background-size: 26.5rem 26.5rem;
+    background-repeat: no-repeat;
+    background-position:bottom ;
+    z-index: 9999;
+}
+.share-cover{
+    position: fixed;
+    display: none;
+    z-index: 99;
+    background: rgba(0,0,0,0.7) ;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
