--- a/weixinApp/css/layout.css
+++ b/weixinApp/css/layout.css
@@ -32,7 +32,7 @@
 }
 .app-title-banner{
     height: 6.4rem;
-    background-color: #00a0e9;
+    background-color: #66c4ca;
     color: #fff;
 }
 .title-number{
@@ -48,14 +48,14 @@
     height: 2rem;
     color: #565656;
     line-height: 2rem;
-    border: 1px solid #00a0e9;
+    border: 1px solid #66c4ca;
     margin-top: 1rem;
     padding: 0.8rem;
     border-radius: 0.416rem;
 }
 .result-one-title{
     height: 18.4rem;
-    background-color: #00a0e9;
+    background-color: #66c4ca;
     color: #fff;
 }
 .result-percent{
