--- a/weixinApp/css/layout.css
+++ b/weixinApp/css/layout.css
@@ -1,6 +1,5 @@
 .part-one-banner{
     width: 100%;
-    margin-top: 1rem;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -20,38 +19,56 @@
     -o-moz-background-size: cover;
     moz-background-size: cover;
 }
+.part-one{
+    width: 80%;
+    margin:0 auto;
+    margin-bottom: 2rem;
+}
 .part-one-title{
-    font-size: 2.4rem;
+    font-size: 2.6rem;
+    font-family: "宋体";
+    font-weight: bold;
     padding: 1rem;
-    color: #565656;
+    color: #fff;
+    width: 80%;
+    margin: 0 auto;
 }
 .part-one-content{
-    padding: 1rem;
     font-size: 1.6rem;
-    color: #9c9c9c;
+    color: #fff;
+    width: 80%;
+    margin: 0 auto;
 }
 .app-title-banner{
-    height: 6.4rem;
+    height: 7.8rem;
     background-color: #66c4ca;
     color: #fff;
 }
 .title-number{
-    margin-left: 1rem;
     font-size: 1rem;
+    width: 80%;
+    margin:0 auto;
 }
 .item-title{
     font-size: 1.8rem;
-    color: #565656;
+    color: #000;
 }
 .item-choose{
     font-size: 1.4rem;
+    background-color: #cfd8d5;
     height: 2rem;
     color: #565656;
     line-height: 2rem;
-    border: 1px solid #66c4ca;
     margin-top: 1rem;
     padding: 0.8rem;
-    border-radius: 0.416rem;
+}
+.item-choose:active{
+    background-color: #66c4ca;
+    color: #fff;
+}
+.item-choose .active{
+    background-color: #66c4ca;
+    color: #fff;
 }
 .result-one-title{
     height: 18.4rem;
@@ -96,6 +113,7 @@
 }
 .today-hot{
     background-color: #fff;
+    margin-top: 7rem;
     padding:0.4rem;
 }
 .today-hot ul li {
@@ -106,5 +124,10 @@
 .today-hot ul li img{
     vertical-align: middle;
     margin-right:0.6rem;
+}
+.loading-div{
+    height: 100%;
+    background-color: #66c4ca;
+    width: 100%;
 }
 
